[gd_scene load_steps=12 format=2]

[ext_resource path="res://scene/main_menu/Fader.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/main_menu/3D_Main_Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Ranchers-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/BungeeShade-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://script/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://scene/environment/Level_1.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 5 )
game_scene = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fader" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="CanvasLayer/Fader"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Fader/Control/VBoxContainer"]
margin_top = 21.0
margin_right = 960.0
margin_bottom = 246.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 0.831373 )
custom_fonts/font = SubResource( 1 )
text = "ball 
challenger"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Fader/Control/VBoxContainer"]
margin_top = 272.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer"]
margin_left = 403.0
margin_top = 34.0
margin_right = 556.0
margin_bottom = 234.0

[node name="StartButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="HelpButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 153.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "Help"

[node name="AboutButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 153.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 4 )
text = "About"

[node name="QuitButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 153.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 5 )
text = "Quit Game"

[node name="3D_Main_Menu" parent="." instance=ExtResource( 2 )]
